# GraphCompute

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  Graph.cpp  Graph.h  LICENSE  Node.cpp  Node.h  README.md  Util.cpp  Util.h  args.h  dev_test.cpp  graph_compute_client.cpp  graph_compute_server.cpp  main.cpp  question_recall_define.h  question_recall_server.cpp  question_recall_test.cpp  type_defination.h
config/: base.ini  jiahao.ini  main.ini  main_test.ini  test.ini  v5_base.ini  v5_exp_knowledge_course.ini  v5_exp_knowledge_course_new.ini  v5_exp_knowledge_new.ini  v5_exp_knowledge_new_jh.ini  v5_new_cut_knowledge.ini  v5_restart.ini  v5_step.ini
exp/: config_generate.py  run_base_exp.sh  run_base_server.sh  run_exp.sh  run_exp_knowledge.sh  run_exp_knowledge_course  run_exp_knowledge_course.sh  run_exp_knowledge_jh.sh  run_jh_exp.sh  run_jh_server.sh  run_server.sh  run_server_knowledge.sh  run_server_knowledge_course.sh  run_server_knowledge_jh.sh
log/base/: GraphCompute.INFO  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-124640.11119  GraphComputeServer.INFO  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-145257.15576  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-145537.15741  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-145558.15767  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-150221.16175  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-150230.16189  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-150617.16397  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-150654.16411  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-154247.19236  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-192317.7788  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-201301.13073  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-220242.26214  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-222431.28785  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210826-084506.20164
log/jiahao/: GraphComputeServer.INFO  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-172908.26938  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-174142.27265  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210826-145820.719  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210826-150543.3165  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210826-151035.4720
log/test/: GraphCompute.ERROR  GraphCompute.INFO  GraphCompute.WARNING  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.ERROR.20210825-111106.9213  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-110419.9091  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-111106.9213  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-112704.9390  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-120514.10650  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-120524.10656  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-121619.10936  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-122420.10996  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-124828.11160  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-130559.11353  GraphCompute.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.WARNING.20210825-110419.9091  GraphComputeServer.ERROR  GraphComputeServer.INFO  GraphComputeServer.WARNING  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.ERROR.20210825-143047.14576  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.ERROR.20210825-144020.14973  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-131311.11516  GraphComputeServer.iZ2ze4ud3f1vmtb84qh4uzZ.work.log.INFO.20210825-132825.11588  (+14 more)
log/v5_base/: GraphComputeServer.INFO  (+1 more)
py_script/: .build_train_json.py.swp  build_train_jh_json.py  build_train_json.py  result_check.py  result_check_base.py  similar_courseware.py  superclass_filter.py  test_question_recall.py
task/: main_exclude_test.json  main_exclude_test_courseware.json  main_train.json  test.json  test_exclude_node.json  test_exclude_node_or_edge_from_file.json  test_single_input.json
(+31 files in other folders)
